[CSS transition] can't use CSS logical properties in transition syntax https://bugs.webkit.org/show_bug.cgi?id=232361 <rdar://problem/84958347>

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark some WPT progressions. The new FAIL result isn't a real regression, that test
simply passed by virtue of not ever starting a transition for a logical property.

* web-platform-tests/css/css-logical/animation-004-expected.txt:

Source/WebCore:

Resolve logical properties when considering properties that should trigger a transition.
To do so, we must pass the newly-set style to some methods such that they may be able to
reolve logical properties as well.

* style/Styleable.cpp:
(WebCore::keyframeEffectForElementAndProperty):
(WebCore::transitionMatchesProperty):
(WebCore::updateCSSTransitionsForStyleableAndProperty):



Canonical link: https://commits.webkit.org/246857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289161 268f45cc-cd09-0410-ab3c-d52691b4dbfc